--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "0.0.1",
   "description": "Turns multiple reducers into a single reducer with support of declare the initial states as default parameters",
   "main": "lib/index.js",
-  "scripts": {
-    "test": "mocha --recursive"
-  },
   "keywords": [
     "reduce",
     "reducer",
@@ -25,13 +22,16 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "gulp": "^3.9.1",
-    "chai": "^3.5.0",
-    "mocha": "^3.1.2",
-    "eslint": "^0.24.1",
     "babel-eslint": "^7.1.1",
     "babel-preset-es2015": "^6.22.0",
+    "babel-preset-stage-0": "^6.22.0",
+    "chai": "^3.5.0",
+    "child_process": "^1.0.2",
+    "eslint": "^0.24.1",
+    "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
-    "gulp-eslint": "^3.0.1"
+    "gulp-eslint": "^3.0.1",
+    "gulp-mocha": "^3.0.1",
+    "mocha": "^3.1.2"
   }
 }
