--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_script:
 script:
   - gulp build
 after_success:
-  - npm install -g semantic-release
+  - npm install -g semantic-release@^4.3.3
 deploy:
   skip_cleanup: true
   provider: script
