--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ cache:
   directories:
     - node_modules
 before_script:
-  - npm install -g gulp yarn
+  - npm install -g gulp yarn codecov
   - yarn
 script:
   - gulp build
@@ -18,7 +18,7 @@ after_success:
 deploy:
   skip_cleanup: true
   provider: script
-  script: semantic-release pre && npm publish && semantic-release post || true
+  script: codecov && semantic-release pre && npm publish && semantic-release post || true
   on:
     branch: master
     node: 7
