--- a/.travis.yml
+++ b/.travis.yml
@@ -13,13 +13,12 @@ before_script:
   - yarn
 script:
   - gulp build
-  - codecov
 after_success:
-  - npm install -g semantic-release@^4.3.3
+  - codecov
 deploy:
   skip_cleanup: true
   provider: script
-  script: semantic-release pre && npm publish && semantic-release post || true
+  script: npm install -g semantic-release@^4.3.3 && semantic-release pre && npm publish && semantic-release post || true
   on:
     branch: master
     node: 7
